# multi_agents2

new_agent/: README.md  llm_response.json  pyproject.toml  report.md
new_agent/knowledge/: myfile.txt
new_agent/src/new_agent/: crew.py  main.py
new_agent/src/new_agent/config/: agents.yaml  tasks.yaml
