[project]
name = "new_agent"
version = "0.1.0"
description = "new-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
     "crewai",
    "google-generativeai>=0.8.4",
]

[project.scripts]
new_agent = "new_agent.main:kickflow"
agent = "new_agent.crew:crewkick"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
